# diff_drive_controller_effort

./: CMakeLists.txt  README.md  diff_drive_controller_effort_plugins.xml  package.xml
cfg/: DiffDriveControllerEffort.cfg
include/diff_drive_controller_effort/: diff_drive_controller_effort.h  odometry.h  speed_limiter.h  torque_limiter.h
src/: diff_drive_controller_effort.cpp  odometry.cpp  speed_limiter.cpp  torque_limiter.cpp
